--- a/style.css
+++ b/style.css
@@ -12,6 +12,13 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 /* =Reset
 -------------------------------------------------------------- */
 
+/* apply a natural box layout model to all elements */
+*, *:before, *:after {
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -93,6 +100,7 @@ a img {
 
 /* =Structure
 ----------------------------------------------- */
+/* Calculations based on 1em = 14px */
 
 html,
 body {
@@ -100,48 +108,86 @@ body {
 }
 #page {
 	height: auto;
-	max-width: 960px;
+	max-width: 1200px;
 	margin: 0 auto;
 	min-height: 100%;
-	padding: 1.4285714285em 30px 0;
+	padding: 20px 10px 0;
 	z-index: 0;
-}
-#subsidiary {
-	float: left;
-	position: fixed;
-	width: 240px;
 }
 #masthead {
 	margin: 0 0 2.1428571428em 0;
 	padding: 0.3571428571em 0 0 0;
 }
 #main {
-	float: right;
-	margin-top: 6.6428571428em;
-	width: 68.75%;
+	display:table-header-group;
+	margin:0 0 20px 0;
 }
-.site-content {
-	float: left;
-	margin: 0 0 4.2857142857em 0;
-	width: 68.18181818%;
+#secondary {
+	display:table-row;
+	margin:0 0 20px 0;
+}
+#tertiary {
+	display:table-footer-group;
+	margin:0 0 20px 0;
+}
+.site-footer {
+	font-size: 12px;
+	margin: 0 0 45px 0;
+	text-align: center;
 }
 .sidebar-content .site-content,
 .full-width.site-content,
 .image-attachment.site-content {
 	width: 100%;
 }
-#tertiary {
-	float: right;
-	width: 22.72727272%;
+
+/* =Responsive Structure
+-------------------------------------------------------------- */
+
+@media all and (min-width: 640px) {
+	#page {
+		padding:20px 15px 0;
+	}
+	#main {
+		display:block;
+		margin-left:270px;
+		overflow:hidden;
+	}
+	#secondary {
+		display:block;
+		float:left;		
+		width:270px;
+		padding-right:30px;
+	}
+	#tertiary {
+		display:block;
+		margin-left:270px;
+		overflow:hidden;
+	}
+	
 }
-.site-footer {
-	clear: both;
-	float: right;
-	font-size: 12px;
-	font-size: 1.2rem;
-	margin: 0 0 3.3333333333em 0;
-	text-align: right;
-	width: 68.75%;
+
+@media all and (min-width: 1024px) {
+	#page {
+		padding: 20px 30px 0;
+	}
+	#main {
+		display:table-cell;
+		vertical-align:top;
+		float:none;
+	}
+	#secondary {
+		display:table-cell;
+		vertical-align:top;
+		float:none;
+	}
+	#tertiary {
+		display:table-cell;
+		vertical-align:top;
+		float:none;
+		width:210px;
+		padding-left:30px;
+	}
 }
 
 
@@ -1033,72 +1079,6 @@ a.comment-reply-link {
 }
 
 
-/* =Responsive Structure
--------------------------------------------------------------- */
-
-@media screen and (max-width: 924px) {
-	#page {
-		max-width: 924px;
-		padding: 1.4285714285em 15px 0;
-	}
-	#main {
-		width: 64.28571428%;
-	}
-	.site-content {
-		float: none;
-		margin: 0 0 3.5714285714em 0;
-		width: 100%;
-	}
-	#tertiary {
-		float: none;
-		margin: 0 0 3.5714285714em 0;
-		width: 100%;
-	}
-	.site-footer {
-		width: 64.20581655%;
-	}
-}
-@media screen and (max-width: 786px) {
-	#page {
-		max-width: 786px;
-	}
-	#main {
-		width: 61.83206106%;
-	}
-	.site-footer {
-		width: 61.64021164%;
-	}
-}
-@media screen and (max-width: 698px) {
-	#page {
-		max-width: 698px;
-		padding: 1.4285714285em 10px 0;
-	}
-	#subsidiary {
-		float: none;
-		position: relative;
-		width: 100%;
-	}
-	#main {
-		float: none;
-		margin-top: 0;
-		padding-top: 1.4285714285em;
-		width: 100%;
-	}
-	.widget_search #s {
-		width: 98%;
-	}
-	.site-footer {
-		width: 100%;
-	}
-}
-@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
-	.entry-content embed,
-	.entry-content iframe:not(.post-likes-widget),
-	.entry-content object {
-		height: auto;
-	}
-}
 
 
 /* =IE8
@@ -1112,25 +1092,17 @@ a.comment-reply-link {
 }
 
 
-/* =WP.com
+/* Archives widget: make the links inline 
 -------------------------------------------------------------- */
 
-.entry-content .reblog-post {
-	border-left: 5px solid #4c4c4c;
-	padding: 0 0 0 16px;
+#secondary .widget_archive li {
+	display:inline;
 }
-.entry-content .embed-youtube {
-	text-align: inherit !important;
+#secondary .widget_archive li:before {
+	content: "* ";
+	color: #660000;
+	font-size:smaller;
 }
-.entry-content div.sharedaddy div.sd-block {
-	border-top: 1px dotted #4c4c4c;
-}
-.syntaxhighlighter {
-	overflow: auto;
-}
-#wpstats {
-	display: block;
-	margin: 0;
-	position: relative;
-	z-index: 999;
+#secondary .widget_archive li:first-child:before {
+	content: "";
 }
